--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
 Django==3.1.4
+django-extensions==3.1.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.4.0
+gunicorn==20.0.4
 importlib-metadata==3.3.0
 Markdown==3.3.3
 PyJWT==1.7.1
