--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework-simplejwt==4.4.0
 gunicorn==20.0.4
 importlib-metadata==3.3.0
 Markdown==3.3.3
+psycopg2==2.8.6
 PyJWT==1.7.1
 pytz==2020.4
 sqlparse==0.4.1
