--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,13 +6,20 @@ on:
       - main
 
 jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Prepare repo
-#        uses: actions/checkout@master
-#      - name: Test
-#        uses: onichandame/python-test-action@master
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Prepare repo
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.6.7
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.6.7
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run tests
+        run: python manage.py test
 
   build:
     runs-on: ubuntu-latest
