--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Prepare repo
+        name: Prepare repo
       - uses: actions/checkout@v2
-      - name: Set up Python 3.6.7
+        name: Set up Python 3.6.7
       - uses: actions/setup-python@v2
         with:
           python-version: 3.6.7
-      - name: Install dependencies
+        name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests
         run: python manage.py test
