--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.6.7
+      - name: Run tests
         run: pip install -r requirements.txt
       - name: Run tests
         run: python manage.py test
